--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rej Averion</title>
 </head>
 <body>
-    Hello World
+    https://www.linkedin.com/in/rejaverion/
+
+    Hire me
 </body>
 </html>
