--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Rej Averion</title>
 </head>
 <body>
-    https://www.linkedin.com/in/rejaverion/
-
+    <a href="url">https://www.linkedin.com/in/rejaverion/</a>
     Hire me
 </body>
 </html>
