--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Rej Averion</title>
 </head>
 <body>
-    <a href="url">https://www.linkedin.com/in/rejaverion/</a>
+    <a href="https://www.linkedin.com/in/rejaverion/">https://www.linkedin.com/in/rejaverion/</a>
 </body>
 </html>
