--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rej Averion</title>
+    
+    <style>
+    canvas {
+        background-color: #000000;
+        position: absolute;
+        top: 30px;
+    }
+    </style>
 </head>
 <body>
-    <a href="https://www.linkedin.com/in/rejaverion/">https://www.linkedin.com/in/rejaverion/</a>
+    Block Hopper
+    <div id="canvas"></div>
+    <body onload = start()>
+        <script src="mygame.js"></script>
+    </body>
 </body>
 </html>
