--- a/index.html
+++ b/index.html
@@ -7,18 +7,53 @@
     <title>Rej Averion</title>
     
     <style>
-    canvas {
-        background-color: #000000;
-        position: absolute;
-        top: 30px;
-    }
+        body { background-color: #0a0020;
+
+        }
+        .div-1 {
+            font-family: "Source Code Pro", "Lucida Console", monospace;
+            color: white;
+            text-align: center;
+        }
+        .div-2 {
+            margin: auto;
+            font-family: "Source Code Pro", "Lucida Console", monospace;
+            /*background-color: #000000;*/
+            margin-top: 20px;
+            height: 200px;
+            width: 600px;
+            text-align: center;
+            color: white;
+            padding: 10px;
+        }
+        .linkedinLink:link {
+            color: lime;
+        }
+        .linkedinLink:visited {
+            color: white;
+        }
+        .linkedinLink:hover {
+            color: cyan;
+        }
+        .igLink:link {
+            color: lime;
+        }
+        .igLink:visited {
+            color: white;
+        }
+        .igLink:hover {
+            color: cyan;
+        }
     </style>
 </head>
 <body>
-    Block Hopper
-    <div id="canvas"></div>
-    <body onload = start()>
-        <script src="mygame.js"></script>
+    <br>
+    <div class="div-1">Rej Averion</div>
+    <div class="div-2">
+        <a class="linkedinLink" href = "https://www.linkedin.com/in/rejaverion/">LinkedIn</a>
+        <a class="igLink" href = "https://www.instagram.com/rejaverion/">Instagram</a>
+    </div>
+    <body>
     </body>
 </body>
 </html>
