added text area and react app

--- a/index.html
+++ b/index.html
@@ -5,71 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rej Averion</title>
+    <link rel="stylesheet" href="style.css" />
     
-    <style>
-        body { background-color: #0a0020;
-
-        }
-        .div-0 {
-            font-family: "Source Code Pro", "Lucida Console", monospace;
-            color: white;
-            text-align: center;
-        }
-        .parent-1 {
-            height: 30px;
-            text-align: center;
-            margin-top: 30px;
-        }
-        .parent-2 {
-            height: 50px;
-            text-align: center;
-        }
-        .div-1 {
-            display: inline-block;
-            height: 20px;
-            width: 100px;
-            margin-right: 5px;
-            font-family: "Source Code Pro", "Lucida Console", monospace;
-            text-align: right;
-            color: white;
-        }
-        .div-2 {
-            display: inline-block;
-            height: 20px;
-            width: 100px;
-            margin-left: 5px;
-            font-family: "Source Code Pro", "Lucida Console", monospace;
-            text-align: left;
-            color: white;
-        }
-        .div-3 {
-            display: inline-block;
-            height: 20px;
-            width: 100px;
-            margin-right: 5px;
-            font-family: "Source Code Pro", "Lucida Console", monospace;
-            text-align: right;
-            color: white;
-        }
-        .div-4 {
-            display: inline-block;
-            height: 20px;
-            width: 100px;
-            margin-left: 5px;
-            font-family: "Source Code Pro", "Lucida Console", monospace;
-            text-align: left;
-            color: white;
-        }
-        .linkedinLink:link, .igLink:link, .youtubeLink, .githubLink {
-            color: cyan;
-        }
-        .linkedinLink:visited, .igLink:visited, .youtubeLink:visited, .githubLink:visited {
-            color: cyan;
-        }
-        .linkedinLink:hover, .igLink:hover, .youtubeLink:hover, .githubLink:hover {
-            color: yellow;
-        }
-    </style>
 </head>
 <body>
     <br>
@@ -89,6 +26,12 @@
         <div class="div-4">
             <a class="youtubeLink" href = "https://www.youtube.com/@chromicfever4180">Youtube</a>
         </div>
+    </div>
+    <div class="text-area">
+        <label class="label-1" for="freeform">Encrypt text:</label>
+        <br>
+        <textarea class="freeform" name="freeform" rows="30" cols="100">Enter text here...
+        </textarea>
     </div>
 </body>
 </html>
