--- a/index.html
+++ b/index.html
@@ -55,5 +55,9 @@ Enter text to encrypt/decrypt...</textarea
         /><br />
       </form>
     </div>
+    <div class="buttons">
+        <button class="button-3" type="button" role="button">Encrypt</button>
+        <button class="button-4" type="button" role="button">Decrypt</button>
+    </div:>
   </body>
 </html>
