added new pages

--- a/index.html
+++ b/index.html
@@ -4,60 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rej Averion</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Rej Averion | Software Engineer</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <br />
-    <div class="div-0">Rej Averion</div>
-    <div class="parent-1">
-      <div class="div-1">
-        <a class="linkedinLink" href="https://www.linkedin.com/in/rejaverion/"
-          >LinkedIn</a
-        >
+    <div id="parent-div" class="container">
+      <div id="leftwing" class="leftwing">
+        <span id="name" class="name"> Rej Averion </span>
       </div>
-      <div class="div-2">
-        <a class="igLink" href="https://www.instagram.com/rejaverion/"
-          >Instagram</a
-        >
+      <div id="rightwing" class="rightwing">
+        <div id="rightwing-subcontainer" class="rightwing-subcontainer">
+          <div id="text1-container" class="text1-container">
+            <span id="resume-label" class="text1"> Resume </span>
+          </div>
+          <div id="text2-container" class="text2-container">
+            <span id="projects-label" class="text2"> Projects </span>
+          </div>
+          <div id="text3-container" class="text3-container">
+            <span id="textcryptor-label" class="text3"> TextCryptor </span>
+          </div>
+        </div>
       </div>
+      <div id="vertical-line" class="vertical-line"></div>
     </div>
-    <div class="parent-2">
-      <div class="div-3">
-        <a class="githubLink" href="https://github.com/raverion">GitHub</a>
-      </div>
-      <div class="div-4">
-        <a class="youtubeLink" href="https://www.youtube.com/@chromicfever4180"
-          >Youtube</a
-        >
-      </div>
-    </div>
-    <div class="text-area-div">
-      <!-- <label class="label-1" for="textarea1">Text:</label> -->
-      <br />
-      <textarea
-        id="textarea1"
-        name="textarea1"
-        rows="30"
-        cols="100"
-        autofocus="autofocus"
-      >
-Enter text to encrypt/decrypt...</textarea
-      >
-      <form>
-        <label class="label-1" for="key">Key:</label><br />
-        <input
-          type="password"
-          id="fname"
-          name="fname"
-          size="80"
-          required="required"
-        /><br />
-      </form>
-    </div>
-    <div class="buttons">
-        <button class="button-3" type="button" role="button">Encrypt</button>
-        <button class="button-4" type="button" role="button">Decrypt</button>
-    </div:>
   </body>
 </html>
