--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div id="parent-div" class="container">
+    <div id="parent-div" class="parent-div">
       <div id="leftwing" class="leftwing">
         <span id="name" class="name"> Rej Averion </span>
       </div>
