added custom fonts, resume.pdf, hyperlink to TextCryptor

--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
       <div id="rightwing" class="rightwing">
         <div id="rightwing-subcontainer" class="rightwing-subcontainer">
           <div id="text1-container" class="text1-container">
-            <span id="resume-label" class="text1"> Resume </span>
+            <a href="resume.pdf"
+              ><span id="resume-label" class="text1"> Resume </span></a
+            >
           </div>
           <div id="text2-container" class="text2-container">
             <span id="projects-label" class="text2"> Projects </span>
           </div>
           <div id="text3-container" class="text3-container">
-            <span id="textcryptor-label" class="text3"> TextCryptor </span>
+            <a href="textcryptor.html"
+              ><span id="textcryptor-label" class="text3">
+                TextCryptor
+              </span></a
+            >
           </div>
         </div>
       </div>
