--- a/textcryptor.html
+++ b/textcryptor.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Text Cryptor</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="textcryptor.css" />
   </head>
   <body>
     <br />
