add open file functionality

--- a/textcryptor.html
+++ b/textcryptor.html
@@ -11,7 +11,7 @@
   <body>
     <script src="textcryptor.js"></script>
     <br />
-    <div class="div-0">Text Encryptor/Decryptor</div>
+    <div class="div-0">Text Encryptor/Decryptor</div><!-- 
     <div class="parent-1">
       <div class="div-1">
         <a class="linkedinLink" href="https://www.linkedin.com/in/rejaverion/"
@@ -32,7 +32,7 @@
         <a class="youtubeLink" href="https://www.youtube.com/@chromicfever4180"
           >Youtube</a
         >
-      </div>
+      </div> -->
     </div>
     <div class="text-area-div">
       <!-- <label class="label-1" for="textarea1">Text:</label> -->
@@ -74,6 +74,24 @@
         role="button"
       >
         Decrypt
+      </button>
+    </div>
+    <div class="File-button-container">
+      <button
+        onClick="openFile()"
+        class="openFile-button"
+        type="button"
+        role="button"
+      >
+        Open
+      </button>
+      <button
+        onClick="saveFile()"
+        class="saveFile-button"
+        type="button"
+        role="button"
+      >
+        Save
       </button>
     </div>
   </body>
