add save file functionality

--- a/textcryptor.html
+++ b/textcryptor.html
@@ -11,31 +11,9 @@
   <body>
     <script src="textcryptor.js"></script>
     <br />
-    <div class="div-0">Text Encryptor/Decryptor</div><!-- 
-    <div class="parent-1">
-      <div class="div-1">
-        <a class="linkedinLink" href="https://www.linkedin.com/in/rejaverion/"
-          >LinkedIn</a
-        >
-      </div>
-      <div class="div-2">
-        <a class="igLink" href="https://www.instagram.com/rejaverion/"
-          >Instagram</a
-        >
-      </div>
-    </div>
-    <div class="parent-2">
-      <div class="div-3">
-        <a class="githubLink" href="https://github.com/raverion">GitHub</a>
-      </div>
-      <div class="div-4">
-        <a class="youtubeLink" href="https://www.youtube.com/@chromicfever4180"
-          >Youtube</a
-        >
-      </div> -->
+    <div class="div-0">Text Encryptor/Decryptor</div>
     </div>
     <div class="text-area-div">
-      <!-- <label class="label-1" for="textarea1">Text:</label> -->
       <br />
       <textarea
         id="textarea1"
@@ -43,6 +21,7 @@
         rows="30"
         cols="100"
         autofocus="autofocus"
+        spellcheck="false"
         placeholder="Enter text to encrypt/decrypt..."
       ></textarea>
       <form>
