attempt to mount react-todo-app

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             >
           </div>
           <div id="text2-container" class="text2-container">
-            <span id="projects-label" class="text2"> Projects </span>
+            <a href="projects.html">
+              <span id="projects-label" class="text2"> Projects </span></a
+            >
           </div>
           <div id="text3-container" class="text3-container">
             <a href="textcryptor.html"
