attempt to mount react-todo-app

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             >
           </div>
           <div id="text2-container" class="text2-container">
-            <a href="projects.html">
+            <a href="/react-todo-app/projects.html">
               <span id="projects-label" class="text2"> Projects </span></a
             >
           </div>
