--- a/react-todo-app/projects.html
+++ b/react-todo-app/projects.html
@@ -21,7 +21,8 @@
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script>
 
-    <script src="/react-todo-app/index.js"></script>
-    <!-- <script src="/react-todo-app/App.js"></script> -->
+    <!-- <script src="/react-todo-app/index.js"></script> -->
+    <script src="/react-todo-app/App.js"></script>
+    <link rel="stylesheet" href="/react-todo-app/App.css" />
   </body>
 </html>
