updated react component

--- a/react-todo-app/projects.html
+++ b/react-todo-app/projects.html
@@ -7,18 +7,18 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="root">
+    <div id="like_button_container">
       <!-- Here we will mount our component -->
     </div>
 
     <!-- To load React add the scripts. -->
     <script
-      crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
+      crossorigin
     ></script>
     <script
-      crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+      crossorigin
     ></script>
 
     <!-- <script src="/react-todo-app/index.js"></script> -->
