--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
         <div id="rightwing-subcontainer" class="rightwing-subcontainer">
           <div id="text1-container" class="text1-container">
             <a href="resume.pdf"
-              ><span id="resume-label" class="text1"> Resume </span></a
+              ><span id="resume-label" class="text1"> resume.pdf </span></a
             >
           </div>
           <div id="text2-container" class="text2-container">
             <a href="/react-app/projects.html">
-              <span id="projects-label" class="text2"> Projects </span></a
+              <span id="projects-label" class="text2">
+                &lt;projects/&gt;
+              </span></a
             >
           </div>
           <div id="text3-container" class="text3-container">
