--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             >
           </div>
           <div id="text2-container" class="text2-container">
-            <a href="/react-app/projects.html">
+            <a href="projects.html">
               <span id="projects-label" class="text2">
                 &lt;projects/&gt;
               </span></a
