updated docugen link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div id="text2-container" class="text2-container">
             <a href="projects.html">
               <span id="projects-label" class="text2">
-                &lt;projects/&gt;
+                &lt;/projects&gt;
               </span></a
             >
           </div>
