--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,6 @@
 </a>
 <a href="/react-app/projects.html">To-do List App</a>
 <a href="textcryptor.html">TextCryptor</a>
-<a href="#">Document Generator</a>
+<a href="/docugen/docugen.html">Document Generator</a>
   </body>
 </html>
