--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="rightwing-subcontainer" class="rightwing-subcontainer">
           <div id="text1-container" class="text1-container">
             <a href="resume.pdf"
-              ><span id="resume-label" class="text1"> resume.pdf </span></a
+              ><span id="resume-label" class="text1"> My Profile </span></a
             >
           </div>
           <div id="text2-container" class="text2-container">
