--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div id="rightwing" class="rightwing">
         <div id="rightwing-subcontainer" class="rightwing-subcontainer">
           <div id="text1-container" class="text1-container">
-            <a href="resume.pdf"
+            <a href="profile.pdf"
               ><span id="resume-label" class="text1"> My Profile </span></a
             >
           </div>
