Initiate STDF visualizer project
Created folder and place-holder html file

--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
 
   <body>
 </a>
+<a href="/stdf_visualizer/stdf_visualizer.html">STDF Visualizer (work-in-progress)</a>
 <a href="/react-app/projects.html">To-do List App</a>
 <a href="textcryptor.html">TextCryptor</a>
 <a href="/docugen/docugen.html">Document Generator</a>
