--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div id="rightwing" class="rightwing">
         <div id="rightwing-subcontainer" class="rightwing-subcontainer">
           <div id="text1-container" class="text1-container">
-            <a href="profile.pdf"
+            <a href="resume.html"
               ><span id="resume-label" class="text1"> My Profile </span></a
             >
           </div>
