--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rej Averion | Interactive Resume</title>
+    <title>Rej Averion | Resume / Profile</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
@@ -131,24 +131,35 @@
         height: 32px;
       }
 
-      .nav-links {
+      .nav-right {
         display: flex;
-        gap: 2rem;
-        list-style: none;
+        align-items: center;
+        gap: 1.5rem;
       }
 
-      .nav-links a {
-        color: var(--text-secondary);
+      .linkedin-btn {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        background: rgba(0, 119, 181, 0.2);
+        border: 1px solid #0077b5;
+        color: #0077b5;
+        padding: 0.5rem 1rem;
+        border-radius: 25px;
+        font-family: "Space Mono", monospace;
+        font-size: 0.85rem;
         text-decoration: none;
-        font-weight: 600;
-        font-size: 0.9rem;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        transition: color 0.3s ease;
+        transition: all 0.3s ease;
       }
 
-      .nav-links a:hover {
-        color: var(--accent-cyan);
+      .linkedin-btn:hover {
+        background: #0077b5;
+        color: white;
+      }
+
+      .linkedin-btn svg {
+        width: 18px;
+        height: 18px;
       }
 
       .back-btn {
@@ -472,6 +483,7 @@
         border: 1px solid rgba(255, 255, 255, 0.05);
         backdrop-filter: blur(10px);
         transition: all 0.4s ease;
+        cursor: pointer;
       }
 
       .timeline-item::before {
@@ -537,6 +549,54 @@
         display: flex;
         align-items: center;
         gap: 0.5rem;
+      }
+
+      /* Expandable Details */
+      .timeline-details {
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.5s ease, margin-top 0.3s ease,
+          opacity 0.3s ease;
+        opacity: 0;
+      }
+
+      .timeline-item:hover .timeline-details {
+        max-height: 300px;
+        margin-top: 1.5rem;
+        opacity: 1;
+      }
+
+      .timeline-details-content {
+        padding-top: 1rem;
+        border-top: 1px solid rgba(0, 245, 212, 0.2);
+      }
+
+      .timeline-details h4 {
+        color: var(--accent-cyan);
+        font-size: 0.9rem;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        margin-bottom: 0.8rem;
+      }
+
+      .timeline-details ul {
+        list-style: none;
+        padding: 0;
+      }
+
+      .timeline-details li {
+        color: var(--text-secondary);
+        font-size: 0.95rem;
+        padding: 0.4rem 0;
+        padding-left: 1.5rem;
+        position: relative;
+      }
+
+      .timeline-details li::before {
+        content: "▹";
+        color: var(--accent-cyan);
+        position: absolute;
+        left: 0;
       }
 
       /* Education Section */
@@ -613,6 +673,112 @@
         font-weight: 600;
       }
 
+      /* About Me Section */
+      .about-section .section-icon {
+        background: linear-gradient(
+          135deg,
+          var(--accent-purple),
+          var(--accent-blue)
+        );
+      }
+
+      .about-card {
+        background: var(--card-bg);
+        border-radius: 24px;
+        padding: 3rem;
+        border: 1px solid rgba(255, 255, 255, 0.05);
+        backdrop-filter: blur(10px);
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 3rem;
+        position: relative;
+        overflow: hidden;
+      }
+
+      .about-card::before {
+        content: "";
+        position: absolute;
+        top: -100px;
+        left: -100px;
+        width: 300px;
+        height: 300px;
+        background: radial-gradient(
+          circle,
+          rgba(123, 44, 191, 0.15),
+          transparent 70%
+        );
+        pointer-events: none;
+      }
+
+      .about-text h3 {
+        font-size: 1.5rem;
+        font-weight: 800;
+        margin-bottom: 1rem;
+        color: var(--accent-cyan);
+      }
+
+      .about-text p {
+        color: var(--text-secondary);
+        font-size: 1.05rem;
+        line-height: 1.8;
+        margin-bottom: 1rem;
+      }
+
+      .about-hobbies {
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+      }
+
+      .about-hobbies h3 {
+        font-size: 1.5rem;
+        font-weight: 800;
+        color: var(--accent-yellow);
+      }
+
+      .hobby-item {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        padding: 1rem;
+        background: rgba(0, 245, 212, 0.05);
+        border-radius: 16px;
+        border: 1px solid rgba(0, 245, 212, 0.1);
+        transition: all 0.3s ease;
+      }
+
+      .hobby-item:hover {
+        background: rgba(0, 245, 212, 0.1);
+        transform: translateX(10px);
+      }
+
+      .hobby-icon {
+        width: 50px;
+        height: 50px;
+        border-radius: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-shrink: 0;
+      }
+
+      .hobby-icon svg {
+        width: 28px;
+        height: 28px;
+      }
+
+      .hobby-text {
+        font-weight: 600;
+        color: var(--text-primary);
+      }
+
+      .hobby-text span {
+        display: block;
+        font-size: 0.85rem;
+        font-weight: 400;
+        color: var(--text-secondary);
+      }
+
       /* Interactive Circuit Board */
       .circuit-decoration {
         position: fixed;
@@ -638,6 +804,7 @@
         justify-content: center;
         gap: 2rem;
         margin-bottom: 1rem;
+        flex-wrap: wrap;
       }
 
       .footer-links a {
@@ -673,7 +840,11 @@
           padding: 1rem;
         }
 
-        .nav-links {
+        .nav-right {
+          gap: 0.5rem;
+        }
+
+        .linkedin-btn span {
           display: none;
         }
 
@@ -684,6 +855,10 @@
         .education-card {
           flex-direction: column;
           text-align: center;
+        }
+
+        .about-card {
+          grid-template-columns: 1fr;
         }
 
         .skills-grid {
@@ -806,19 +981,33 @@
         </svg>
         REJ.DEV
       </a>
-      <a href="index.html" class="back-btn">← Back Home</a>
+      <div class="nav-right">
+        <a
+          href="https://www.linkedin.com/in/rejaverion/"
+          target="_blank"
+          class="linkedin-btn"
+        >
+          <svg viewBox="0 0 24 24" fill="currentColor">
+            <path
+              d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
+            />
+          </svg>
+          <span>LinkedIn</span>
+        </a>
+        <a href="index.html" class="back-btn">← Back Home</a>
+      </div>
     </nav>
 
     <!-- Hero Section -->
     <section class="hero">
       <div class="hero-content">
         <div class="hero-text">
-          <span class="hero-label">Interactive Resume</span>
+          <span class="hero-label">Resume / Profile</span>
           <h1 class="hero-name">Rej Averion</h1>
           <h2 class="hero-title">Test & Verification Engineer</h2>
           <p class="hero-description">
             From silicon to software, I bridge the gap between hardware and
-            intelligence. With 7+ years in semiconductors and a fresh
+            intelligence. With 7+ years in automotive semiconductors and a fresh
             perspective in Medical OEM, I design hardware, write code, debug the
             impossible, and leverage AI to revolutionize testing workflows.
           </p>
@@ -1172,7 +1361,8 @@
             <span class="skill-tag">Altium Designer</span>
             <span class="skill-tag">Cadence Allegro</span>
             <span class="skill-tag">LTSpice</span>
-            <span class="skill-tag">PCB Layout</span>
+            <span class="skill-tag">Signal Integrity</span>
+            <span class="skill-tag">Power Integrity</span>
           </div>
         </div>
 
@@ -1201,7 +1391,10 @@
             <span class="skill-tag">SPC</span>
             <span class="skill-tag">MSA</span>
             <span class="skill-tag">Gage R&R</span>
-            <span class="skill-tag">Data Analysis</span>
+            <span class="skill-tag">FMEA</span>
+            <span class="skill-tag">Yield Improvement</span>
+            <span class="skill-tag">OEE Improvement</span>
+            <span class="skill-tag">Test Optimization</span>
           </div>
         </div>
 
@@ -1255,6 +1448,7 @@
           </div>
           <div class="skill-tags">
             <span class="skill-tag">Vector CANoe</span>
+            <span class="skill-tag">Visual Studio</span>
             <span class="skill-tag">Git</span>
             <span class="skill-tag">SVN</span>
             <span class="skill-tag">JIRA</span>
@@ -1295,6 +1489,29 @@
             </svg>
             Munich, Germany
           </p>
+          <div class="timeline-details">
+            <div class="timeline-details-content">
+              <h4>Key Responsibilities</h4>
+              <ul>
+                <li>
+                  Developing verification strategies for medical device software
+                  per IEC 62304
+                </li>
+                <li>
+                  Creating and executing test cases for embedded systems in
+                  medical OEM products
+                </li>
+                <li>
+                  Collaborating with cross-functional teams to ensure regulatory
+                  compliance
+                </li>
+                <li>
+                  Implementing automated test frameworks to improve verification
+                  efficiency
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
 
         <div class="timeline-item">
@@ -1315,6 +1532,29 @@
             </svg>
             Dortmund, Germany
           </p>
+          <div class="timeline-details">
+            <div class="timeline-details-content">
+              <h4>Key Responsibilities</h4>
+              <ul>
+                <li>
+                  On-site support for automotive semiconductor test programs
+                  across Europe
+                </li>
+                <li>
+                  Debugging and optimizing test solutions on SPEA and ETS
+                  platforms
+                </li>
+                <li>
+                  Training customer engineers on ATE operation and test program
+                  development
+                </li>
+                <li>
+                  Achieving significant test time reductions through program
+                  optimization
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
 
         <div class="timeline-item">
@@ -1335,6 +1575,29 @@
             </svg>
             Dubai, UAE
           </p>
+          <div class="timeline-details">
+            <div class="timeline-details-content">
+              <h4>Key Responsibilities</h4>
+              <ul>
+                <li>
+                  Managing MEP (Mechanical, Electrical, Plumbing) projects for
+                  commercial buildings
+                </li>
+                <li>
+                  Coordinating with contractors and ensuring project timelines
+                  were met
+                </li>
+                <li>
+                  Applying engineering problem-solving skills across diverse
+                  technical domains
+                </li>
+                <li>
+                  Gaining valuable cross-industry experience in construction and
+                  infrastructure
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
 
         <div class="timeline-item">
@@ -1355,6 +1618,28 @@
             </svg>
             Cavite, Philippines
           </p>
+          <div class="timeline-details">
+            <div class="timeline-details-content">
+              <h4>Key Responsibilities</h4>
+              <ul>
+                <li>
+                  Leading test development for automotive-grade power management
+                  ICs
+                </li>
+                <li>
+                  Implementing SPC methodologies to improve yield and reduce
+                  test escapes
+                </li>
+                <li>
+                  Mentoring junior engineers and conducting technical reviews
+                </li>
+                <li>
+                  Driving continuous improvement initiatives resulting in 15%
+                  yield improvement
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
 
         <div class="timeline-item">
@@ -1375,6 +1660,29 @@
             </svg>
             Cavite, Philippines
           </p>
+          <div class="timeline-details">
+            <div class="timeline-details-content">
+              <h4>Key Responsibilities</h4>
+              <ul>
+                <li>
+                  Developing test programs for mixed-signal automotive ICs on
+                  Advantest T2000
+                </li>
+                <li>
+                  Designing loadboard hardware using Altium Designer for
+                  high-speed interfaces
+                </li>
+                <li>
+                  Performing correlation studies between ATE and bench
+                  measurements
+                </li>
+                <li>
+                  Contributing to new product introduction (NPI) from silicon
+                  bring-up to production
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -1411,6 +1719,105 @@
       </div>
     </section>
 
+    <!-- About Me Section -->
+    <section class="section about-section" id="about">
+      <div class="section-header">
+        <div class="section-icon">
+          <svg viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
+            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2" />
+            <circle cx="12" cy="7" r="4" />
+          </svg>
+        </div>
+        <h2 class="section-title">Beyond the Circuits</h2>
+      </div>
+
+      <div class="about-card">
+        <div class="about-text">
+          <h3>A Little About Me</h3>
+          <p>
+            I'm a Filipino engineer who made the leap to Germany, bringing with
+            me a love for problem-solving and a curiosity that extends far
+            beyond the lab. When I'm not debugging test programs or optimizing
+            silicon verification flows, you'll find me exploring the world
+            through different lenses.
+          </p>
+          <p>
+            Living in Germany has been an adventure in itself — from navigating
+            the language to discovering the beauty of European landscapes. I
+            believe that the best engineers are those who never stop learning,
+            whether it's a new programming language or a new opening in chess.
+          </p>
+        </div>
+        <div class="about-hobbies">
+          <h3>What I Do for Fun</h3>
+          <div class="hobby-item">
+            <div
+              class="hobby-icon"
+              style="background: linear-gradient(135deg, #f72585, #7b2cbf)"
+            >
+              <svg
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="white"
+                stroke-width="2"
+              >
+                <path
+                  d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"
+                />
+                <circle cx="12" cy="13" r="4" />
+              </svg>
+            </div>
+            <div class="hobby-text">
+              Photography
+              <span>Capturing moments, still learning the art</span>
+            </div>
+          </div>
+          <div class="hobby-item">
+            <div
+              class="hobby-icon"
+              style="background: linear-gradient(135deg, #00f5d4, #4895ef)"
+            >
+              <svg
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="white"
+                stroke-width="2"
+              >
+                <path d="M12 2L2 7l10 5 10-5-10-5z" />
+                <path d="M2 17l10 5 10-5" />
+                <path d="M2 12l10 5 10-5" />
+              </svg>
+            </div>
+            <div class="hobby-text">
+              Drones
+              <span>Aerial perspectives, endless possibilities</span>
+            </div>
+          </div>
+          <div class="hobby-item">
+            <div
+              class="hobby-icon"
+              style="background: linear-gradient(135deg, #fee440, #ff7b00)"
+            >
+              <svg
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="white"
+                stroke-width="2"
+              >
+                <rect x="3" y="3" width="18" height="18" rx="2" />
+                <path d="M9 9h.01M15 9h.01M9 15h.01M15 15h.01" />
+                <path d="M9 9L15 15M15 9L9 15" />
+              </svg>
+            </div>
+            <div class="hobby-text">
+              Chess
+              <span>Enthusiastic player, questionable rating</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Circuit Board Decoration SVG -->
     <svg
       class="circuit-decoration"
@@ -1442,6 +1849,9 @@
         <a href="index.html">Home</a>
         <a href="projects.html">Projects</a>
         <a href="textcryptor.html">TextCryptor</a>
+        <a href="https://www.linkedin.com/in/rejaverion/" target="_blank"
+          >LinkedIn</a
+        >
       </div>
       <p>Designed with electrons and passion • Rej Averion © 2025</p>
     </footer>
@@ -1482,7 +1892,9 @@
         );
 
         document
-          .querySelectorAll(".skill-card, .timeline-item, .education-card")
+          .querySelectorAll(
+            ".skill-card, .timeline-item, .education-card, .about-card"
+          )
           .forEach((el) => {
             el.style.opacity = "0";
             el.style.transform = "translateY(30px)";
