--- a/resume/index.html
+++ b/resume/index.html
@@ -848,6 +848,10 @@
           display: none;
         }
 
+        .nav-right {
+          gap: 0.3rem;
+        }
+
         .timeline {
           padding-left: 2rem;
         }
@@ -982,6 +986,23 @@
         REJ.DEV
       </a>
       <div class="nav-right">
+        <a
+          href="https://github.com/raverion"
+          target="_blank"
+          class="linkedin-btn"
+          style="
+            background: rgba(110, 84, 148, 0.2);
+            border-color: #6e5494;
+            color: #a78bfa;
+          "
+        >
+          <svg viewBox="0 0 24 24" fill="currentColor">
+            <path
+              d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
+            />
+          </svg>
+          <span>GitHub</span>
+        </a>
         <a
           href="https://www.linkedin.com/in/rejaverion/"
           target="_blank"
@@ -1124,7 +1145,7 @@
             </g>
 
             <!-- Pins - Left -->
-            <g fill="#f72585">
+            <g fill="#fee440">
               <rect x="80" y="120" width="25" height="8" rx="2" />
               <rect x="80" y="145" width="25" height="8" rx="2" />
               <rect x="80" y="170" width="25" height="8" rx="2" />
@@ -1135,7 +1156,7 @@
             </g>
 
             <!-- Pins - Right -->
-            <g fill="#f72585">
+            <g fill="#fee440">
               <rect x="295" y="120" width="25" height="8" rx="2" />
               <rect x="295" y="145" width="25" height="8" rx="2" />
               <rect x="295" y="170" width="25" height="8" rx="2" />
@@ -1164,48 +1185,6 @@
               <circle cx="350" cy="50" r="6" fill="#7b2cbf" opacity="0.8" />
               <circle cx="50" cy="350" r="6" fill="#4895ef" opacity="0.8" />
               <circle cx="350" cy="350" r="8" fill="#00f5d4" opacity="0.8" />
-            </g>
-
-            <!-- Flip-flop symbol (small) -->
-            <g transform="translate(320, 300)" class="glow-yellow">
-              <rect
-                x="0"
-                y="0"
-                width="40"
-                height="30"
-                fill="none"
-                stroke="#fee440"
-                stroke-width="1.5"
-                rx="3"
-              />
-              <text
-                x="8"
-                y="12"
-                fill="#fee440"
-                font-size="8"
-                font-family="monospace"
-              >
-                D
-              </text>
-              <text
-                x="8"
-                y="24"
-                fill="#fee440"
-                font-size="8"
-                font-family="monospace"
-              >
-                CLK
-              </text>
-              <text
-                x="28"
-                y="12"
-                fill="#fee440"
-                font-size="8"
-                font-family="monospace"
-              >
-                Q
-              </text>
-              <polygon points="4,20 8,23 4,26" fill="#fee440" />
             </g>
 
             <!-- Gradient definitions -->
@@ -1849,6 +1828,7 @@
         <a href="index.html">Home</a>
         <a href="projects.html">Projects</a>
         <a href="textcryptor.html">TextCryptor</a>
+        <a href="https://github.com/raverion" target="_blank">GitHub</a>
         <a href="https://www.linkedin.com/in/rejaverion/" target="_blank"
           >LinkedIn</a
         >
