--- a/resume/index.html
+++ b/resume/index.html
@@ -1489,20 +1489,16 @@
               <h4>Key Responsibilities</h4>
               <ul>
                 <li>
-                  Developing verification strategies for medical device software
-                  per IEC 62304
+                  Developing qualification protocols for verification test
+                  equipment
                 </li>
                 <li>
-                  Creating and executing test cases for embedded systems in
-                  medical OEM products
+                  Executing test cases for embedded systems in medical OEM
+                  products
                 </li>
+                <li>Implementing automation of bench equipment calibration</li>
                 <li>
-                  Collaborating with cross-functional teams to ensure regulatory
-                  compliance
-                </li>
-                <li>
-                  Implementing automated test frameworks to improve verification
-                  efficiency
+                  Developing measurement system analysis tools and frameworks
                 </li>
               </ul>
             </div>
@@ -1532,20 +1528,19 @@
               <h4>Key Responsibilities</h4>
               <ul>
                 <li>
-                  On-site support for automotive semiconductor test programs
-                  across Europe
+                  On-site support for automotive semiconductor test development
                 </li>
                 <li>
-                  Debugging and optimizing test solutions on SPEA and ETS
-                  platforms
+                  Debugging and qualifying various test hardware on Advantest
+                  T2000 platform
                 </li>
                 <li>
-                  Training customer engineers on ATE operation and test program
+                  Training junior engineers on ATE operation and test program
                   development
                 </li>
                 <li>
-                  Achieving significant test time reductions through program
-                  optimization
+                  Achieving significant test time reductions and throughput
+                  improvement through test optimization techniques
                 </li>
               </ul>
             </div>
@@ -1575,20 +1570,20 @@
               <h4>Key Responsibilities</h4>
               <ul>
                 <li>
-                  Managing MEP (Mechanical, Electrical, Plumbing) projects for
-                  commercial buildings
+                  Managing renovation projects for residential and commercial
+                  properties
                 </li>
                 <li>
-                  Coordinating with contractors and ensuring project timelines
-                  were met
+                  Coordinating with suppliers, contractors, and clients to
+                  ensure project timelines were met
                 </li>
                 <li>
-                  Applying engineering problem-solving skills across diverse
-                  technical domains
+                  Developing internal SW tools that accelerate logistical and
+                  administrative tasks
                 </li>
                 <li>
-                  Gaining valuable cross-industry experience in construction and
-                  infrastructure
+                  Gaining HVAC, mechanical, painting and construction knowledge
+                  and experience
                 </li>
               </ul>
             </div>
@@ -1622,15 +1617,15 @@
                   ICs
                 </li>
                 <li>
-                  Implementing SPC methodologies to improve yield and reduce
-                  test escapes
+                  Driving high-visibility ATE platform migration projects with
+                  aggressive timelines
+                </li>
+                <li>
+                  Traveling to off-short sites for engineering and manufacturing
+                  support purposes
                 </li>
                 <li>
                   Mentoring junior engineers and conducting technical reviews
-                </li>
-                <li>
-                  Driving continuous improvement initiatives resulting in 15%
-                  yield improvement
                 </li>
               </ul>
             </div>
@@ -1660,20 +1655,18 @@
               <h4>Key Responsibilities</h4>
               <ul>
                 <li>
-                  Developing test programs for mixed-signal automotive ICs on
-                  Advantest T2000
+                  Developing test programs for mixed-signal automotive ICs
                 </li>
                 <li>
-                  Designing loadboard hardware using Altium Designer for
-                  high-speed interfaces
+                  Designing loadboards and probecards for high-speed SerDes
                 </li>
                 <li>
                   Performing correlation studies between ATE and bench
                   measurements
                 </li>
                 <li>
-                  Contributing to new product introduction (NPI) from silicon
-                  bring-up to production
+                  Optimizing test solutions to improve yield, reduce downtime,
+                  and increase gross margins
                 </li>
               </ul>
             </div>
@@ -1723,24 +1716,25 @@
             <circle cx="12" cy="7" r="4" />
           </svg>
         </div>
-        <h2 class="section-title">Beyond the Circuits</h2>
+        <h2 class="section-title">Beyond the workbench, away from the lab</h2>
       </div>
 
       <div class="about-card">
         <div class="about-text">
           <h3>A Little About Me</h3>
           <p>
-            I'm a Filipino engineer who made the leap to Germany, bringing with
-            me a love for problem-solving and a curiosity that extends far
-            beyond the lab. When I'm not debugging test programs or optimizing
-            silicon verification flows, you'll find me exploring the world
-            through different lenses.
+            Servus. Moin. Guten Tag! I'm a Filipino engineer who made the leap
+            to Germany, bringing with me a love for problem-solving and a
+            curiosity that extends beyond the lab. When I'm not debugging test
+            setups or crunching measurement data, you'll find me exploring the
+            world through different lenses, or having a Helles Bier with
+            Weißwurst at an alpine lake.
           </p>
           <p>
             Living in Germany has been an adventure in itself — from navigating
             the language to discovering the beauty of European landscapes. I
             believe that the best engineers are those who never stop learning,
-            whether it's a new programming language or a new opening in chess.
+            whether it's a new technlogical paradaigm or a new opening in chess.
           </p>
         </div>
         <div class="about-hobbies">
@@ -1764,7 +1758,7 @@
             </div>
             <div class="hobby-text">
               Photography
-              <span>Capturing moments, still learning the art</span>
+              <span>Capturing real moments that no AI can generate</span>
             </div>
           </div>
           <div class="hobby-item">
@@ -1797,7 +1791,10 @@
             </div>
             <div class="hobby-text">
               Drones
-              <span>Aerial perspectives, endless possibilities</span>
+              <span
+                >Nothing like an aerial perspective, when you're not hounded by
+                anti-drone regulations</span
+              >
             </div>
           </div>
           <div class="hobby-item">
