--- a/resume/index.html
+++ b/resume/index.html
@@ -873,6 +873,10 @@
           display: none;
         }
 
+        .github-btn span {
+          display: none;
+        }
+
         .nav-right {
           gap: 0.3rem;
         }
@@ -892,6 +896,14 @@
 
         .skills-grid {
           grid-template-columns: 1fr;
+        }
+
+        .hero {
+          padding-bottom: 6rem;
+        }
+
+        .scroll-indicator {
+          display: none;
         }
       }
 
